--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PokeLALALLAdex</title>
+    <title>Pokedex</title>
     <link rel="icon" type="image/x-icon" href="./img/favicon-footer.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media.css">
